<resources
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="MissingTranslation">

    <string name="app_name">Meteo Veneto</string>
    <string name="action_title">Veneto</string>

    <string name="search_hint">Insert the location</string>

    <string name="notFound">not found</string>

    <string name="cielo">Sky</string>
    <string name="temperatura">Temperature</string>
    <string name="temperatura_1500">Temperature 1500 m.</string>
    <string name="temperatura_2000">Temperature 2000 m.</string>
    <string name="temperatura_3000">Temperature 3000 m.</string>
    <string name="precipitazioni">Rain</string>
    <string name="probabilita">Rain probability</string>
    <string name="quota_neve">Snow level</string>
    <string name="attendibilita">Forecast reliability</string>
    <string name="aggiornato">Updated</string>

    <string name="evoluzione">General evolution</string>

    <string name="current_location">current_location</string>

    <string name="save_location">Save the location</string>
    <string name="search_location">Search</string>
    <string name="gps">gps</string>
    <string name="home">Favorite location</string>
    <string name="settings">Preferences</string>
    <string name="credits">Credits</string>
    <string name="refresh">Refresh</string>

    <string name="pref_display_key">display_key</string>
    <string name="pref_display_title">Display</string>

    <string name="pref_language_key">language_key</string>
    <string name="pref_language_title">Language</string>

    <string name="pref_bulletin_key">bulletin_key</string>
    <string name="pref_bulletin_title">Bulletin</string>
    <string name="pref_bulletin_on_summary">display the bulletin (only in italian)</string>
    <string name="pref_bulletin_off_summary">hide the bulletin</string>

    <string name="pref_location_key">location_key</string>
    <string name="pref_location_title">Location</string>

    <string name="pref_town_key">town_key</string>
    <string name="pref_town_title">Favorite location</string>

    <string name="pref_gps_key">gps_key</string>
    <string name="pref_gps_title">Use GPS if available</string>

    <string name="pref_notifications_key">notifications_key</string>
    <string name="pref_notifications_title">Notifications</string>

    <string name="pref_alert_key">alert_key</string>
    <string name="pref_alert_title">Alert</string>

    <string-array
        name="pref_language_entries">
        <item>Default (recommended)</item>
        <item>Italiano</item>
        <item>English</item>
        <item>Français</item>
        <item>Deutsch</item>
    </string-array>

    <string-array
        name="pref_language_values">
        <item>default</item>
        <item>it</item>
        <item>en</item>
        <item>fr</item>
        <item>de</item>
    </string-array>

    <string name="pref_language_default">default</string>

    <string name="data_title">Forecast</string>
    <string name="data_body">The forecasts are kindly provided by ARPAV with license CC BY 3.0</string>
    <string name="arpav_name">ARPAV</string>
    <string name="arpav_site">http://www.arpa.veneto.it</string>
    <string name="arpav_license_name">CC BY 3.0</string>
    <string name="arpav_license_site">https://creativecommons.org/licenses/by/3.0/deed.en</string>

    <string name="icons_title">Icons</string>
    <string name="icons_body">This app uses icons of Nick Roach distribuited with license GPL and emilie.rollandin with license CC0 1.0 Universal (CC0 1.0)</string>
    <string name="nick_name">Nick Roach</string>
    <string name="nick_site">https://www.iconfinder.com/icons/1054936/cloud_cloudy_sun_weather_icon#size=128</string>
    <string name="nick_license_name">GPL</string>
    <string name="nick_license_site">http://www.gnu.org/copyleft/gpl.html</string>
    <string name="emilie_name">emilie.rollandin</string>
    <string name="emilie_site">https://openclipart.org/user-cliparts/emilie.rollandin</string>
    <string name="emilie_license_name">CC0 1.0 Universal (CC0 1.0)</string>
    <string name="emilie_license_site">https://creativecommons.org/publicdomain/zero/1.0/</string>

    <string name="developer_title">Developer</string>
    <string name="developer_body">Meteo Veneto is developed by Luca Zanini with license GPL\n
        It is free and with no ads\n
        The source code is available at the GIT repository\n</string>
    <string name="developer_name">Luca Zanini</string>
    <string name="developer_site">http://www.lucazanini.eu</string>
    <string name="app_license_name">GPL</string>
    <string name="app_license_site">http://www.gnu.org/copyleft/gpl.html</string>
    <string name="repository_name">GIT repository</string>
    <string name="repository_site">https://github.com/luni66/Arpav</string>

    <string name="report_file">report_file.json</string>
    <string name="report_date">date</string>
    <string name="report_alert">alert</string>
    <string name="report_phenomena">alert</string>

    <string name="alert_title">Weather warning</string>

    <string name="report_category">Log Report</string>
    <string name="pref_acra">enable.acra</string>
    <string name="crash_toast_text">Ooooops ! I crashed, but a report has been sent to my developer to help fix the issue !</string>
    <string name="crash_dialog_title">CrashTest has crashed</string>
    <string name="crash_dialog_text">An unexpected error occurred forcing the
    application to stop. Please help us fix this by sending us error data,
    all you have to do is click OK.</string>
    <string name="crash_dialog_comment_prompt">You might add your comments about the problem below:</string>
    <string name="crash_dialog_ok_toast">Thank you !</string>

    <string name="pref_enable_acra">Send crash reports to developer?</string>
    <string name="pref_acra_enabled">Yes</string>
    <string name="pref_acra_disabled">No</string>
    <string name="pref_acra_syslog_enabled">Sending system logs is enabled</string>
    <string name="pref_acra_syslog_disabled">Sending system logs is disabled</string>
    <string name="pref_acra_syslog">Send system logs (may contain private data)?</string>
    <string name="pref_acra_deviceid_enabled">Send device id is enabled</string>
    <string name="pref_acra_deviceid_disabled">Do not send device id</string>
    <string name="pref_acra_user_email">Add your email address</string>
    <string name="pref_acra_deviceid">Send device unique id?</string>
    <string name="pref_acra_user_email_summary">Developers may contact you to solve issues.</string>
    <string name="pref_acra_alwaysaccept">Always send crash reports?</string>
    <string name="pref_acra_alwaysaccept_enabled">Reports are sent without asking.</string>
    <string name="pref_acra_alwaysaccept_disabled">Each report needs your approval.</string>

</resources>
