<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:key="@string/pref_display_key"
        android:title="@string/pref_display_title">

    <ListPreference
        android:defaultValue="@string/pref_language_default"
        android:dialogTitle="@string/pref_language_title"
        android:entries="@array/pref_language_entries"
        android:entryValues="@array/pref_language_values"
        android:key="@string/pref_language_key"
        android:title="@string/pref_language_title"/>

    <SwitchPreference
        android:defaultValue="true"
        android:key="@string/pref_bulletin_key"
        android:summaryOff="@string/pref_bulletin_off_summary"
        android:summaryOn="@string/pref_bulletin_on_summary"
        android:title="@string/pref_bulletin_title"/>

    </PreferenceCategory>

    <PreferenceCategory
        android:key="@string/pref_notifications_key"
        android:title="@string/pref_notifications_title">

        <SwitchPreference
            android:defaultValue="false"
            android:dependency="@string/pref_bulletin_key"
            android:key="@string/pref_alert_key"
            android:title="@string/pref_alert_title"/>

    </PreferenceCategory>

    <PreferenceCategory
        android:key="@string/pref_location_key"
        android:title="@string/pref_location_title">

        <Preference
            android:key="@string/pref_town_key"
            android:title="@string/pref_town_title"/>

        <SwitchPreference
            android:defaultValue="true"
            android:key="@string/pref_gps_key"
            android:title="@string/pref_gps_title"/>


    </PreferenceCategory>

    <PreferenceCategory android:title="@string/report_category">
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="@string/pref_acra"
            android:summaryOff="@string/pref_acra_disabled"
            android:summaryOn="@string/pref_acra_enabled"
            android:title="@string/pref_enable_acra"/>

        <!--<CheckBoxPreference-->
            <!--android:defaultValue="false"-->
            <!--android:dependency="@string/pref_acra"-->
            <!--android:key="@string/pref_acra_alwaysaccept"-->
            <!--android:summaryOff="@string/pref_acra_alwaysaccept_disabled"-->
            <!--android:summaryOn="@string/pref_acra_alwaysaccept_enabled"-->
            android:title="@string/pref_acra_alwaysaccept"/>
    </PreferenceCategory>

</PreferenceScreen>