<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <ListPreference
        android:key="@string/pref_language_key"
        android:title="@string/pref_language_title"
        android:dialogTitle="@string/pref_language_title"
        android:entries="@array/pref_language_entries"
        android:entryValues="@array/pref_language_values"
        android:defaultValue="@string/pref_language_default" />

    <PreferenceCategory
        android:title="@string/pref_location_title"
        android:key="@string/pref_location_key">

        <Preference
            android:key="@string/pref_town_key"
            android:title="@string/pref_town_title" />

        <CheckBoxPreference
            android:key="@string/pref_gps_key"
            android:title="@string/pref_gps_title"
            android:defaultValue="true" />


    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/pref_notifications_title"
        android:key="@string/pref_notifications_key">

        <CheckBoxPreference
            android:key="@string/pref_alert_key"
            android:title="@string/pref_alert_title"
            android:defaultValue="false" />

    </PreferenceCategory>

</PreferenceScreen>